--- a/app/src/main/res/layout/item_book_horizontal.xml
+++ b/app/src/main/res/layout/item_book_horizontal.xml
@@ -23,6 +23,7 @@
         android:clickable="true"
         android:clipToPadding="false"
         android:focusable="true"
+        android:foreground="@drawable/selector_8dp"
         android:padding="2dp"
         tools:visibility="visible">
 
