--- a/app/src/main/res/layout/item_prayer.xml
+++ b/app/src/main/res/layout/item_prayer.xml
@@ -22,6 +22,7 @@
         android:clickable="true"
         android:clipToPadding="false"
         android:focusable="true"
+        android:foreground="@drawable/selector"
         android:orientation="vertical"
         tools:visibility="visible">
 
