--- a/app/src/main/res/layout/fragment_read_prayer.xml
+++ b/app/src/main/res/layout/fragment_read_prayer.xml
@@ -117,6 +117,7 @@
             android:elevation="2dp"
             android:orientation="vertical"
             android:padding="8dp"
+            android:visibility="@{viewModel.showNavigation ? View.VISIBLE : View.GONE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent">
