--- a/app/src/main/res/layout/item_book_empty.xml
+++ b/app/src/main/res/layout/item_book_empty.xml
@@ -13,8 +13,8 @@
 
     <RelativeLayout
         android:id="@+id/root"
-        android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
         android:layout_margin="4dp"
         android:background="@drawable/shp_grey_8dp"
         android:clickable="true"
