--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_read_quran"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/nav_read_quran"
     app:startDestination="@id/home">
     <fragment
         android:id="@+id/home"
         android:name="com.mayburger.dzikirqu.ui.main.home.HomeFragment"
-        android:label="HomeFragment" >
+        android:label="HomeFragment">
         <action
             android:id="@+id/action_homeFragment_to_prayTimeFragment"
-            app:destination="@id/prayTime" />
+            app:destination="@id/prayTime"
+            app:enterAnim="@anim/fade_in"
+            app:exitAnim="@anim/fade_out"
+            app:popEnterAnim="@anim/fade_in"
+            app:popExitAnim="@anim/fade_out" />
     </fragment>
     <fragment
         android:id="@+id/prayTime"
