Added list of surah and juz

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -212,8 +212,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:onClick="@{()->viewModel.onClickLastRead()}"
                 android:background="@drawable/shp_primary_8dp"
+                android:elevation="4dp"
+                android:onClick="@{()->viewModel.onClickLastRead()}"
                 android:padding="16dp"
                 android:visibility="@{viewModel.dataManager.quranLastRead == null ? View.GONE : View.VISIBLE}"
                 app:layout_constraintLeft_toLeftOf="@id/quran"
