--- a/app/src/main/res/layout/fragment_read_quran_bsd.xml
+++ b/app/src/main/res/layout/fragment_read_quran_bsd.xml
@@ -23,13 +23,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:paddingTop="16dp"
-        android:paddingBottom="16dp"
-        android:orientation="vertical">
+        android:paddingBottom="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/selector"
+            android:onClick="@{()->viewModel.onClickLastRead()}"
             android:orientation="horizontal"
             android:padding="8dp">
 
@@ -43,7 +45,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:onClick="@{()->viewModel.onClickLastRead()}"
                 android:orientation="vertical">
 
                 <com.mayburger.dzikirqu.util.textfont.TextFont
