--- a/app/src/main/res/layout/item_ayah.xml
+++ b/app/src/main/res/layout/item_ayah.xml
@@ -63,7 +63,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:text="@{viewModel.data.translation}"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorTextGrey"
                 android:textSize="16sp"
                 app:layout_constraintLeft_toRightOf="@id/index"
                 app:layout_constraintRight_toRightOf="parent"
