--- a/app/src/main/res/layout/item_juz.xml
+++ b/app/src/main/res/layout/item_juz.xml
@@ -11,19 +11,19 @@
 
         <variable
             name="viewModel"
-            type="com.mayburger.dzikirqu.ui.adapters.viewmodels.ItemSurahViewModel" />
+            type="com.mayburger.dzikirqu.ui.adapters.viewmodels.ItemJuzViewModel" />
 
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="4dp"
+        android:elevation="1dp"
         android:background="@drawable/shp_white_border_selector_8dp"
-        android:elevation="1dp">
+        android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/parent"
@@ -38,7 +38,7 @@
                 android:layout_height="32dp"
                 android:background="@drawable/circle_primary"
                 android:gravity="center"
-                android:text="@{viewModel.index}"
+                android:text="@{viewModel.number}"
                 android:textColor="@color/colorWhite"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -52,12 +52,12 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:text="@{viewModel.data.name}"
+                android:text="@{viewModel.juzNumber}"
                 android:textColor="@color/colorBlack"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@id/translation"
                 app:layout_constraintLeft_toRightOf="@id/index"
-                app:layout_constraintRight_toRightOf="@id/arabic"
+                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:typeface="bold"
                 tools:text="Al Fatihah" />
@@ -66,26 +66,14 @@
                 android:id="@+id/translation"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@{viewModel.data.translation}"
+                android:text="@{viewModel.startFrom}"
                 android:textColor="@color/colorTextGrey"
-                android:textSize="14sp"
+                android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="@id/title"
-                app:layout_constraintRight_toRightOf="@id/arabic"
+                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/title"
                 tools:text="The Opening" />
-
-            <com.mayburger.dzikirqu.util.textfont.TextFont
-                android:id="@+id/arabic"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:text="@{viewModel.data.arabic}"
-                android:textColor="@color/colorBlack"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:typeface="uthman" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
