--- a/app/src/main/res/layout/main_tab_layout.xml
+++ b/app/src/main/res/layout/main_tab_layout.xml
@@ -4,19 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/tab_background"
     android:gravity="center"
     android:orientation="horizontal"
     android:paddingTop="4dp"
-    android:paddingBottom="4dp"
-    android:paddingEnd="8dp">
-
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:padding="2dp"
-        tools:src="@drawable/ic_home_white" />
+    android:paddingEnd="8dp"
+    android:paddingBottom="4dp">
 
     <com.mayburger.dzikirqu.util.textfont.TextFont
         android:id="@+id/title"
@@ -24,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:text="Home"
-        android:textColor="@color/colorWhite"
-        app:typeface="bold" />
+        android:textColor="@color/tab_text_color"
+        android:textSize="16sp" />
 
 </LinearLayout>
