--- a/app/src/main/res/layout/fragment_prayer.xml
+++ b/app/src/main/res/layout/fragment_prayer.xml
@@ -20,6 +20,7 @@
         android:id="@+id/root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fillViewport="true"
         android:background="@color/colorGreyBackground">
 
         <LinearLayout
