--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,15 +40,15 @@
             android:id="@+id/alpha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone"
             android:alpha="0"
-            android:background="#80000000" />
+            android:background="#80000000"
+            android:visibility="gone" />
 
         <LinearLayout
             android:id="@+id/sheet"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorWhite"
+            android:background="@color/colorGreyBackground"
             app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
             <FrameLayout
