--- a/app/src/main/res/layout/item_quran_bookmarks.xml
+++ b/app/src/main/res/layout/item_quran_bookmarks.xml
@@ -59,6 +59,16 @@
                 app:layout_constraintTop_toBottomOf="@id/title"
                 tools:text="Verse No. 7" />
 
+            <ImageView
+                android:id="@+id/close"
+                android:layout_width="32dp"
+                android:src="@drawable/ic_close_grey"
+                android:padding="4dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_height="32dp"/>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
