--- a/app/src/main/res/xml/fragment_pray_time_xml_constraintlayout2_scene.xml
+++ b/app/src/main/res/xml/fragment_pray_time_xml_constraintlayout2_scene.xml
@@ -37,7 +37,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            motion:layout_constraintTop_toBottomOf="@id/datetime" />
+            motion:layout_constraintTop_toBottomOf="@id/datetime">
+        </Constraint>
         <Constraint
             android:id="@+id/praytime"
             android:layout_width="match_parent"
@@ -47,11 +48,12 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:alpha="1"
-            motion:layout_constraintTop_toBottomOf="@id/header" />
+            motion:layout_constraintTop_toBottomOf="@id/header">
+        </Constraint>
     </ConstraintSet>
     <Transition
         motion:autoTransition="animateToEnd"
-        motion:duration="400"
         motion:constraintSetEnd="@+id/end"
-        motion:constraintSetStart="@+id/start" />
+        motion:constraintSetStart="@+id/start"
+        motion:duration="400" />
 </MotionScene>
